<resources>
    <string name="app_name">LatihanTextView</string>
    <string name="textview">TextView</string>
    <string name="textview_menggunakan_perataan">textview menggunakan perataan</string>
    <string name="textview_menggunakan_warna_huruf">textview menggunakan warna huruf</string>
    <string name="textview_dengan_jenis_font_serif">textview dengan jenis font serif</string>
    <string name="textview_dengan_ukuran_font_20dp">textview dengan ukuran font 20dp</string>
    <string name="textview_dengan_bold">textview dengan bold</string>
</resources>
